--- a/RSS Project survey data.ipynb
+++ b/RSS Project survey data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "id": "5e5e7bd8-18cc-4c13-bb66-51ee37f2da46",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "id": "b437258e-d866-4dd8-ae3e-6dfeb7496370",
    "metadata": {},
    "outputs": [
@@ -151,7 +151,7 @@
        "1  87b2df75ed   NaN  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "id": "7c6c48df-71fe-4836-8f4a-23bd91bcbf30",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "id": "adb4d42f-756a-4529-8b7d-a4fe5e3deae4",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "id": "a6eaa6ed-75d1-483f-9b04-26b9501a29ac",
    "metadata": {},
    "outputs": [],
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "id": "8ecc82ff-f5db-42d8-8634-7ae84a7b013b",
    "metadata": {},
    "outputs": [],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "id": "164c27cf-1983-435a-9c74-03b06d05c434",
    "metadata": {},
    "outputs": [
@@ -279,7 +279,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "id": "5169b26e-9ebb-4fe4-a5f1-685d55c64d64",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "id": "0887ad33-036a-4705-b314-0d63fd81921a",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "id": "bfea7627-bd87-4717-8044-cec532b2791f",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "id": "c4b9a656-47fe-425e-9152-cd01a70554d8",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
        "1                       The design lacks originality    "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "id": "dbd6f256-58d1-47ac-93dd-0518266d5ccf",
    "metadata": {},
    "outputs": [
@@ -498,7 +498,7 @@
        "0"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "id": "e353d3ec-a35d-4492-a1b8-796837d96dad",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "(35, 11)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 14,
    "id": "4d6e815f-b594-4a0f-b3ba-c8ea8889c8cc",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "<Axes: title={'center': 'Have you used an RSS reader?'}>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 15,
    "id": "16aed298-d2b2-4e44-a603-005776571e5e",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "id": "312bc32f-c27d-4fed-96cb-21bf38f48d6f",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
        "4                This is a plain and ordinary design  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 17,
    "id": "263b9748-f5a2-4502-8c17-e2d405e2069d",
    "metadata": {},
    "outputs": [
@@ -704,7 +704,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package vader_lexicon to C:\\Users\\Hope\n",
-      "[nltk_data]     E\\AppData\\Roaming\\nltk_data...\n"
+      "[nltk_data]     E\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
      ]
     }
    ],
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 18,
    "id": "27698fb7-9133-49c9-9292-4061927f7687",
    "metadata": {},
    "outputs": [],
@@ -739,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 19,
    "id": "f43828b8-523d-4249-85cf-1348bcea922e",
    "metadata": {},
    "outputs": [
@@ -807,7 +808,7 @@
        "4                This is a plain and ordinary design     neutral"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 20,
    "id": "18f3084d-7f24-4617-aded-26976ef333f0",
    "metadata": {},
    "outputs": [
@@ -831,7 +832,7 @@
        "<Axes: title={'center': 'Sentiment'}>"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
